"adjust footer margins to prevent breakpoint on iphone5"

--- a/css/custom.css
+++ b/css/custom.css
@@ -104,7 +104,7 @@ a:active {
         width: 100%;
     }
     .social-media-link{
-    	margin: 10% 5% 10% 5%;
+    	margin: 10% 3% 10% 3%;
     }
 }
 
